# auditlm

./: Cargo.toml  README.md  flake.nix
auditlm/: Cargo.toml
auditlm/api/: forgejo.v1.json
auditlm/prompts/: forgejo_prompt.txt  git_prompt.txt
auditlm/src/: container.rs  main.rs
auditlm/src/commands/: forgejo.rs  git.rs  mod.rs
auditlm/src/commands/forgejo/: client.rs  common.rs  config.rs  error.rs  main.rs  mod.rs  review.rs  server.rs  types.rs  utils.rs
auditlm/src/tools/: execute.rs  mod.rs  todo.rs
examples/: .env.example  README.md  docker-compose.yaml
src/: container.rs  main.rs
src/tools/: execute.rs
