[package]
name = "auditlm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bollard = "0.18.1"
clap = { version = "4.5.48", features = ["derive"] }
futures = "0.3.31"
rig-core = "0.21.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4"] }
