[package]
name = "auditlm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bollard = "0.18.1"
clap = { version = "4.5.48", features = ["derive", "env"] }
futures = "0.3.31"
http = "1.1.0"
oas3 = "0.19.0"
reqwest = { version = "0.12.9", features = ["json"] }
rig-core = { version = "0.21.0", features = ["rmcp"] }
rmcp = { version = "0.6.4", features = ["transport-io"] }
rmcp-openapi = "0.15.2"
hyper-util = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokio-util = "0.7"
uuid = { version = "1.18.1", features = ["v4"] }
url = "2.5.4"
